Update 'rg7rknzxj-nodejs' component image to: quay.io/jsmid/rhtap-qe:e73a91809cf79a5894ce18d5f60d960bbfdf3b5a@sha256:b1bae9d126eee9fc330069d3086e13ca8091029cc6b79b0de2f5563afde6e180

--- a/components/rg7rknzxj-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/rg7rknzxj-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: rg7rknzxj-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/jsmid/rhtap-qe:e73a91809cf79a5894ce18d5f60d960bbfdf3b5a@sha256:b1bae9d126eee9fc330069d3086e13ca8091029cc6b79b0de2f5563afde6e180
+          name: container-image
